계속하시겠습니까 직전에만 버퍼 비우기